# dapper

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml  test-dockerhub-pulls.yml
dataset-generation/: Create_Linux_DB.py  Create_NUGET_DB.py  Create_PyPI_DB.py  NugetPackageDB.db  README  create_linux_db.py  create_maven_db.py  create_mingw_db.py  create_pypi_db.py  generate_docker_image_mapping.py  requirements.txt
dataset-generation/nuget_data_generator/: .gitignore  main.py  requirements.txt
dataset-generation/nuget_data_generator/entities/: catalog_entity.py  catalog_page.py  catalog_pages_index.py  cursor.py  page_items.py
dataset-generation/nuget_data_generator/services/: nuget_service.py
dataset-generation/scraping-dev/: ScrapeNuGet_All.py  ScrapePyPI_All.py
dataset-generation/spack_db/: Create_spack_DB.py  README.md  conftest.py  rename_tarinfo_file.py  spack_db.py  spack_index_length.py  test_spack_db.py
docs/: basic_usage.md  dataset_list.toml  getting_started.md
python/: pyproject.toml
python/dapper_python/: dataset_loader.py  dataset_viewer.py
python/dapper_python/databases/: database.py
python/dapper_python/databases_v2/: database.py  linux_db.py  maven_db.py  mingw_db.py  python_db.py
python/dapper_python/dataset_generation/: README
python/dapper_python/dataset_generation/datatypes/: exceptions.py
python/dapper_python/dataset_generation/parsing/: cpp.py
python/dapper_python/dataset_generation/utils/: archive.py  ast.py  futures.py  scraping.py
python/dapper_python/utils/: yet_more_itertools.py
python/tests/: test_cpp_parsing.py  test_database_v2.py  test_dataset_loader.py  test_dataset_viewer.py  test_futures.py  test_itertools.py
scripts/: t64-normalized-analysis.py
src/: config.rs  database.rs  dataset_info.rs  dataset_list.rs  dataset_ops.rs  debian_packaging.rs  directory_info.rs  file_path_utils.rs  lib.rs  main.rs  parser.rs  walker.rs
src/dataset/: dataset_list.rs  dataset_ops.rs
src/parsing/: cmake_parser.rs  cpp_parser.rs  mod.rs  parser.rs  python_parser.rs
tests/test_files/: test.cmake  test_sys_calls.py
